--- a/CSS/style.css
+++ b/CSS/style.css
@@ -85,7 +85,7 @@ body{
 
 #home::before{
     content: "";
-    background: url('home2.webp') no-repeat center center/cover;      /*image acche se set ho jaati hai "no-repeat center center/cover" se */
+    background: url('img/home2.webp') no-repeat center center/cover;      /*image acche se set ho jaati hai "no-repeat center center/cover" se */
     position: absolute;
     height: 665px;
     top: 0px;
@@ -151,7 +151,7 @@ body{
 #client-section::before{
     content: "";
     position: absolute;
-    background: url('image1.jpg') no-repeat center center/cover;
+    background: url('img/image1.jpg') no-repeat center center/cover;
     width: 100%;
     height: 99%;
     z-index: -1;
